<resources>
    <string name="app_name">Угадай число!</string>

    <string name="m_label">Приятной игры!</string>
    <string name="m_leaderboard_btn">Лидеры</string>
    <string name="g_start_btn">Начать</string>
    <string name="g_restart_btn">Заново</string>

    <string name="g_label">Угадай число!</string>
    <string name="g_guess_btn">Угадать</string>
    <string name="g_exit_btn">выйти</string>
    <string name="g_label_less">Меньше</string>
    <string name="g_label_more">Больше</string>

    <string name="g_label_win">Победа!</string>
    <string name="g_label_lose">Поражение!</string>

    <string name="menu_main_easy">Легко</string>
    <string name="menu_main_normal">Нормально</string>
    <string name="menu_main_hard">Сложно</string>

    <string name="l_title">Лидеры</string>
</resources>